fix email and added photos

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -285,8 +285,8 @@
 									<li class="col-3-12">
 										<h3 class="">John Eriksson</h3>
 										<p class="micro bold">Besiktningsman</p>
-										<a href="mailto:john@besiktningsman.se">
-											<p class="micro bold text-blue">john@besiktningsman.se</p>
+										<a href="mailto:john.eriksson@besiktningsman.se">
+											<p class="micro bold text-blue">john.eriksson@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
