Career modal updated, combined into one text left and photo right modal

--- a/karriar/index.html
+++ b/karriar/index.html
@@ -145,64 +145,49 @@
 	</nav>
 
 	<!-- HEADER -->
-	<section class="slide fade contact" id="">
-		<div class="content">
-			<div class="container" style="height:560px;">
-				<div class="wrap">
-					<div class="container-lg padding-top-10" style="padding-top: 9%;">
-						<h1 class="">Sveriges ledande entreprenadbesiktningsföretag <br>söker fler besiktningsmän!</h1>
-						<a href="#rekrytering" class="underline"><h3>Läs mer nedan</h3></a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="background" style="background-image:url(../assets/img/ispect/bm_ipad.jpg)"></div>
-	</section>
-	<section class="slide whiteSlide kenBurns fromRight" data-name="rekrytering" data-title="rekrytering" id="rekrytering">
+	<section class="slide fade" id="career">
 		<div class="content">
 			<div class="container">
-				<div class="wrap">
 
-					<div class="fix-12-12">
-						<ul class="flex reverse flex-phone">
+				<div class="container-lg center margin-top-1">
+					<h1>Sveriges ledande entreprenadbesiktningsföretag <br>söker fler besiktningsmän!</h1>
+					<div class="pad shadow">
 
-							<li class="col-6-12 left fromLeft">
-								<img class="macbook-61 margin-bottom-3 soft-shadow img-border-radius" width="1000" src="../assets/img/ispect/bm_pairs.png" alt="Foto av tre besiktningsmän" />
-							</li>
-
-							<li class="col-6-12 left cell-32">
-								<h1>Vill du...</h1>
-								<p>• Utveckla din kompetens i ett trivsamt och intressant företag? </p>
-								<p>• Arbeta i det företag som leder branschens förnyelse?</p>
-								<p>• Kunna belönas bra för ambitiösa arbetsinsatser?</p>
-								<p>• Bli medarbetare oavsett var i landet du bor?</p>
-								<a class="typeform-share common-Button blue" href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank">Ta kontakt med oss!</a>
-								<script>
-									(function() {
-										var qs, js, q, s, d = document,
-											gi = d.getElementById,
-											ce = d.createElement,
-											gt = d.getElementsByTagName,
-											id = 'typef_orm_share',
-											b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
-										if (!gi.call(d, id)) {
-											js = ce.call(d, 'script');
-											js.id = id;
-											js.src = b + 'share.js';
-											q = gt.call(d, 'script')[0];
-											q.parentNode.insertBefore(js, q)
-										}
-									})()
-								</script>
-							</li>
-
-						</ul>
+						<div class="left fromLeft fix-5-12 text-blueGrey">
+							<h3 class="small">Vill du...</h3>
+							<p class="small">• Utveckla din kompetens i ett trivsamt och intressant företag? </p>
+							<p class="small">• Arbeta i det företag som leder branschens förnyelse?</p>
+							<p class="small">• Kunna belönas bra för ambitiösa arbetsinsatser?</p>
+							<p class="small">• Bli medarbetare oavsett var i landet du bor?</p>
+							<a class="typeform-share common-Button blue" href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank">Ta kontakt med oss!</a>
+							<script>
+								(function() {
+									var qs, js, q, s, d = document,
+										gi = d.getElementById,
+										ce = d.createElement,
+										gt = d.getElementsByTagName,
+										id = 'typef_orm_share',
+										b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
+									if (!gi.call(d, id)) {
+										js = ce.call(d, 'script');
+										js.id = id;
+										js.src = b + 'share.js';
+										q = gt.call(d, 'script')[0];
+										q.parentNode.insertBefore(js, q)
+									}
+								})()
+							</script>
+						</div>
+						<div class="right fromRight fix-5-12">
+							<img src="../assets/img/ispect/bm_pairs.png" alt="">
+						</div>
+						
 					</div>
-
 				</div>
+
 			</div>
 		</div>
-
+		<div class="background" style="background-image:url(../assets/img/backgrounds/foundations.jpg)"></div>
 	</section>
 
 	<!-- Footer -->
@@ -215,7 +200,7 @@
 						<img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="max-width: 400px;" class="margin-bottom-1">
 						<p class="bold">Sveriges ledande entreprenadbesiktningsföretag</p>
 						<ul class="later center">
-							<li class="col-6-12 ae-3">
+							<li class="col-6-12">
 								<h3 class="margin-bottom-1">Kontor</h3>
 								<a target="_blank" href="https://goo.gl/maps/RSkTwoQWpEn">
 									<p class="text-blue bold">Heleneborgsgatan 54, 117 32 Stockholm</p>
@@ -224,7 +209,7 @@
 									<p class="text-blue bold">Telefon: 010-165 40 00</p>
 								</a>
 							</li>
-							<li class="col-6-12 ae-5">
+							<li class="col-6-12">
 								<h3 class="margin-bottom-1">Följ oss</h3>
 								<a target="_blank" href="https://medium.com/besiktningsbloggen">
 									<p class="text-blue bold">Besiktningsbloggen</p>
