added new photo of the ispect app

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
 								</script>
 							</li>
 							<li class="col-6-12 left fromRight">
-								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius"  id="landingPagePhotos" width="1000" height="700" src="assets/img/ispect/ispect_bm.jpg" alt="Besiktningsman med iSpect öppen i sin iPad" />
+								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius"  id="landingPagePhotos" width="1000" height="700" src="assets/img/ispect/bm_ispect_closeup.jpg" alt="Besiktningsman med iSpect öppen i sin iPad" />
 							</li>
 						</ul>
 					</div>
@@ -594,7 +594,7 @@
 				</div>
 			</div>
 		</section>
-			<section class="slide whiteSlide kenBurns fromLeft autoHeight" data-name="privat" data-title="privat" id="privat">
+			<section class="slide whiteSlide kenBurns fromLeft autoHeight" data-name="ispectapp" data-title="ispectapp" id="ispectapp">
 				<div class="content">
 					<div class="container">
 						<div class="wrap">
@@ -606,7 +606,7 @@
 										<p>Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
 									</li>
 									<li class="col-6-12 left fromRight">
-										<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" width="900" src="assets/img/ispect/ispect_bm.jpg" alt="Fritidshus på svenska västkusten." />
+										<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" width="900" src="assets/img/ispect/bm_ispect_closeup.jpg" alt="Foto av besiktningsman med appen iSpect" />
 									</li>
 								</ul>
 							</div>
