--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -447,7 +447,7 @@
 				</div>
 			</div>
 		</section>
-			<section class="slide whiteSlide kenBurns fromLeft autoHeight" data-name="privat" data-title="privat" id="privat">
+			<section class="slide whiteSlide kenBurns fromLeft autoHeight" data-name="ispectapp" data-title="ispectapp" id="ispectapp">
 				<div class="content">
 					<div class="container">
 						<div class="wrap">
@@ -459,7 +459,7 @@
 										<p>Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
 									</li>
 									<li class="col-6-12 left fromRight">
-										<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" width="900" src="../assets/img/ispect/ispect_bm.jpg" alt="Fritidshus på västkusten." />
+										<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" width="900" src="../assets/img/ispect/bm_ispect_closeup.jpg" alt="Foto av besiktningsman med appen iSpect" />
 									</li>
 								</ul>
 							</div>
