Updated docs popover text

--- a/index.html
+++ b/index.html
@@ -651,10 +651,10 @@
 							 <div class="absolute">
 								 <h3 class="center">DOKUMENT</h3>
 								 <p class="small center">
-									Nedan kan du ladda ner viktiga dokument
-									<br>
-									gällande besiktningar.
-								</p>
+										Nedan kan du läsa viktiga dokument
+										<br>
+										gällande besiktningar.
+									</p>
 							 </div>
 							 <img src="assets/img/backgrounds/docs.jpg" alt="Foto av dokumenthäften"/>
 							 <div class="dialogContent">
