--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -682,7 +682,7 @@
 							 <div class="absolute">
 								 <h3 class="center">DOKUMENT</h3>
 								 <p class="small center">
-									Nedan kan du ladda ner viktiga dokument
+									Nedan kan du läsa viktiga dokument
 									<br>
 									gällande besiktningar.
 								</p>
