--- a/karriar/index.html
+++ b/karriar/index.html
@@ -181,7 +181,7 @@
 						<div class="right fromRight fix-5-12">
 							<img src="../assets/img/ispect/bm_pairs.png" alt="">
 						</div>
-						
+
 					</div>
 				</div>
 
@@ -243,8 +243,9 @@
 							<div class="absolute">
 								<h3 class="center">DOKUMENT</h3>
 								<p class="small center">
-									Nedan kan du ladda ner viktiga dokument
-									<br> gällande besiktningar.
+									Nedan kan du läsa viktiga dokument
+									<br>
+									gällande besiktningar.
 								</p>
 							</div>
 							<img src="../assets/img/backgrounds/docs.jpg" alt="Foto av dokumenthäften" />
