Added copyright bm.se to all the footers

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -347,7 +347,7 @@
       </div>
     </div>
   </div>
-	<p class="text-blueGrey center-m-down bold" style="font-size:13px;"><a href="http://sebastianselling.com/" tabindex="_blank">Design av Sebastian Selling</a></p>
+	<p class="text-blueGrey center-m-down bold" style="font-size:13px;">© Besiktningsman.se - <a href="http://sebastianselling.com/" target="_blank">Design av Sebastian Selling</a></p>
 </section>
 <!-- ispect details Popup Text -->
 <div class="popup white" data-popup-id="ispect-details" id="ispect-details">
