--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -502,7 +502,7 @@
 				</div>
 			</div>
 		</div>
-		<p class="text-blueGrey center-m-down bold" style="font-size:13px;"><a href="http://sebastianselling.com/" tabindex="_blank">Design av Sebastian Selling</a></p>
+		<p class="text-blueGrey center-m-down bold" style="font-size:13px;">© Besiktningsman.se - <a href="http://sebastianselling.com/" target="_blank">Design av Sebastian Selling</a></p>
 	</section>
 <!-- POPUP WITH LINKS TO NEWSLETTER TEXTS -->
  <div class="popup hidden" data-popup-id="docs" id="docs">
