Specific person list on the contact page has been updated

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -230,28 +230,42 @@
 								<h1>Projektavdelning</h1>
 								<ul class="flex fixedSpaces later left margin-bottom-5">
 									<li class="col-3-12">
-										<h3 class="">Madeleine Müller</h3>
+										<h3>Madeleine Müller</h3>
 										<p class="micro bold">Projektansvarig Storkund</p>
 										<a href="mailto:madeleine@besiktningsman.se">
 											<p class="micro bold text-blue">madeleine@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Nalle Gellermark</h3>
+										<h3>Nalle Gellermark</h3>
 										<p class="micro bold">Projektansvarig Privatpersoner</p>
 										<a href="mailto:nalle@besiktningsman.se">
 											<p class="micro bold text-blue">nalle@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Madeleine Pettersson</h3>
+										<h3>Madeleine Pettersson</h3>
 										<p class="micro bold">Projektassistent</p>
 										<a href="mailto:madde@besiktningsman.se">
 											<p class="micro bold text-blue">madde@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Susanne Linder</h3>
+										<h3>Gabriella Ganbat</h3>
+										<p class="micro bold">Projektassistent</p>
+										<a href="mailto:gabriella.ganbat@besiktningsman.se">
+											<p class="micro bold text-blue">gabriella.ganbat@besiktningsman.se</p>
+										</a>
+									</li>
+									<li class="col-3-12">
+										<h3>Mia Tapper</h3>
+										<p class="micro bold">Projektassistent</p>
+										<a href="mailto:mia.tapper@besiktningsman.se">
+											<p class="micro bold text-blue">mia.tapper@besiktningsman.se</p>
+										</a>
+									</li>
+									<li class="col-3-12">
+										<h3>Susanne Linder</h3>
 										<p class="micro bold">Redovisningsekonom</p>
 										<a href="mailto:susanne@besiktningsman.se">
 											<p class="micro bold text-blue">susanne@besiktningsman.se</p>
@@ -262,143 +276,206 @@
 								<h1>Besiktningsmän</h1>
 								<ul class="flex fixedSpaces later left margin-bottom-5">
 									<li class="col-3-12">
-										<h3 class="">Olof Johansson</h3>
+										<h3>Olof Johansson</h3>
 										<p class="micro bold">Besiktningsman</p>
 										<a href="mailto:olof@besiktningsman.se">
 											<p class="micro bold text-blue">olof@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Mathias Wussow</h3>
+										<h3>Mathias Wussow</h3>
 										<p class="micro bold">Besiktningsman</p>
 										<a href="mailto:mathias@besiktningsman.se">
 											<p class="micro bold text-blue">mathias@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Tom Maurell</h3>
+										<h3>Tom Maurell</h3>
 										<p class="micro bold">Besiktningsman</p>
-										<a href="mailto:tom@besiktningsman.se">
-											<p class="micro bold text-blue">tom@besiktningsman.se</p>
+										<a href="mailto:tom.maurell@besiktningsman.se">
+											<p class="micro bold text-blue">tom.maurell@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">John Eriksson</h3>
+										<h3>John Eriksson</h3>
 										<p class="micro bold">Besiktningsman</p>
 										<a href="mailto:john.eriksson@besiktningsman.se">
 											<p class="micro bold text-blue">john.eriksson@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Leif Berg</h3>
+										<h3>Daniel Mancilla</h3>
 										<p class="micro bold">Besiktningsman</p>
-										<a href="mailto:leif@besiktningsman.se">
-											<p class="micro bold text-blue">leif@besiktningsman.se</p>
+										<a href="mailto:daniel.mancilla@besiktningsman.se">
+											<p class="micro bold text-blue">daniel.mancilla@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Magnus Engström</h3>
+										<h3>Fredrik Lundgren</h3>
 										<p class="micro bold">Besiktningsman</p>
-										<a href="mailto:magnus@besiktningsman.se">
-											<p class="micro bold text-blue">magnus@besiktningsman.se</p>
+										<a href="mailto:fredrik.lundgren@besiktningsman.se">
+											<p class="micro bold text-blue">fredrik.lundgren@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Jose Escobar</h3>
+										<h3>Karl-Fredrik Olsson</h3>
 										<p class="micro bold">Besiktningsman</p>
-										<a href="mailto:jose@besiktningsman.se">
-											<p class="micro bold text-blue">jose@besiktningsman.se</p>
+										<a href="mailto:karl-fredrik@besiktningsman.se">
+											<p class="micro bold text-blue">karl-fredrik@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Lasse Grandahl</h3>
+										<h3>Leif Berg</h3>
+										<p class="micro bold">Besiktningsman</p>
+										<a href="mailto:leif.berg@besiktningsman.se">
+											<p class="micro bold text-blue">leif.berg@besiktningsman.se</p>
+										</a>
+									</li>
+									<li class="col-3-12">
+										<h3>Magnus Engström</h3>
+										<p class="micro bold">Besiktningsman</p>
+										<a href="mailto:magnus.engstrom@besiktningsman.se">
+											<p class="micro bold text-blue">magnus.engstrom@besiktningsman.se</p>
+										</a>
+									</li>
+									<li class="col-3-12">
+										<h3>Lasse Grandahl</h3>
 										<p class="micro bold">Besiktningsman</p>
 										<a href="mailto:lasse@besiktningsman.se">
 											<p class="micro bold text-blue">lasse@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Örjan Höglund</h3>
+										<h3>Örjan Höglund</h3>
 										<p class="micro bold">Besiktningsman</p>
 										<a href="mailto:orjan@besiktningsman.se">
 											<p class="micro bold text-blue">orjan@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Charlie Höglund</h3>
+										<h3>Charlie Höglund</h3>
 										<p class="micro bold">Besiktningsman</p>
-										<a href="mailto:charlie@besiktningsman.se">
-											<p class="micro bold text-blue">charlie@besiktningsman.se</p>
+										<a href="mailto:charlie.hoglund@besiktningsman.se">
+											<p class="micro bold text-blue">charlie.hoglund@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Jeanette Immo</h3>
+										<h3>Jeanette Immo</h3>
 										<p class="micro bold">Besiktningsman</p>
 										<a href="mailto:jeanette@besiktningsman.se">
 											<p class="micro bold text-blue">jeanette@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Dan Jakobsson</h3>
+										<h3>Dan Jakobsson</h3>
 										<p class="micro bold">Besiktningsman</p>
 										<a href="mailto:dan@besiktningsman.se">
 											<p class="micro bold text-blue">dan@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Ulf Johansson</h3>
+										<h3>Ulf Johansson</h3>
 										<p class="micro bold">Besiktningsman</p>
 										<a href="mailto:ulf@besiktningsman.se">
 											<p class="micro bold text-blue">ulf@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Ari Laukka</h3>
-										<p class="micro bold">Besiktningsman</p>
-										<a href="mailto:ari@besiktningsman.se">
-											<p class="micro bold text-blue">ari@besiktningsman.se</p>
-										</a>
-									</li>
-									<li class="col-3-12">
-										<h3 class="">Robert Lindbom</h3>
+										<h3>Robert Lindbom</h3>
 										<p class="micro bold">Besiktningsman</p>
 										<a href="mailto:robert@besiktningsman.se">
 											<p class="micro bold text-blue">robert@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Göran Svensson</h3>
+										<h3>Göran Svensson</h3>
 										<p class="micro bold">Besiktningsman</p>
 										<a href="mailto:goran@besiktningsman.se">
 											<p class="micro bold text-blue">goran@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Margareta Telkert</h3>
+										<h3>Margareta Telkert</h3>
 										<p class="micro bold">Besiktningsman</p>
 										<a href="mailto:margareta@besiktningsman.se">
 											<p class="micro bold text-blue">margareta@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Jim Löfgren</h3>
+										<h3>Jim Löfgren</h3>
 										<p class="micro bold">Besiktningsman</p>
 										<a href="mailto:jim@besiktningsman.se">
 											<p class="micro bold text-blue">jim@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Leo Simic</h3>
+										<h3>Leo Simic</h3>
 										<p class="micro bold">Besiktningsman</p>
 										<a href="mailto:leo@besiktningsman.se">
 											<p class="micro bold text-blue">leo@besiktningsman.se</p>
 										</a>
 									</li>
 									<li class="col-3-12">
-										<h3 class="">Niklas Josefsson</h3>
+										<h3>Michael Stenman</h3>
 										<p class="micro bold">Besiktningsman</p>
-										<a href="mailto:niklas@besiktningsman.se">
-											<p class="micro bold text-blue">niklas@besiktningsman.se</p>
+										<a href="mailto:michael.stenman@besiktningsman.se">
+											<p class="micro bold text-blue">michael.stenman@besiktningsman.se</p>
+										</a>
+									</li>
+									<li class="col-3-12">
+										<h3>Niklas Josefsson</h3>
+										<p class="micro bold">Besiktningsman</p>
+										<a href="mailto:niklas.josefsson@besiktningsman.se">
+											<p class="micro bold text-blue">niklas.josefsson@besiktningsman.se</p>
+										</a>
+									</li>
+									<li class="col-3-12">
+										<h3>Olof Andersson</h3>
+										<p class="micro bold">Besiktningsman</p>
+										<a href="mailto:olof.andersson@besiktningsman.se">
+											<p class="micro bold text-blue">olof.andersson@besiktningsman.se</p>
+										</a>
+									</li>
+									<li class="col-3-12">
+										<h3>Staffan Tjulander</h3>
+										<p class="micro bold">Besiktningsman</p>
+										<a href="mailto:staffan.tjulander@besiktningsman.se">
+											<p class="micro bold text-blue">staffan.tjulander@besiktningsman.se</p>
+										</a>
+									</li>
+									<li class="col-3-12">
+										<h3>Sanharib Safar</h3>
+										<p class="micro bold">Besiktningsman</p>
+										<a href="mailto:safar@besiktningsman.se">
+											<p class="micro bold text-blue">safar@besiktningsman.se</p>
+										</a>
+									</li>
+									<li class="col-3-12">
+										<h3>Thomas Karlsson</h3>
+										<p class="micro bold">Besiktningsman</p>
+										<a href="mailto:thomas.karlsson@besiktningsman.se">
+											<p class="micro bold text-blue">thomas.karlsson@besiktningsman.se</p>
+										</a>
+									</li>
+									<li class="col-3-12">
+										<h3>Thorbjörn Grundström</h3>
+										<p class="micro bold">Besiktningsman</p>
+										<a href="mailto:thorbjorn@besiktningsman.se">
+											<p class="micro bold text-blue">thorbjorn@besiktningsman.se</p>
+										</a>
+									</li>
+									<li class="col-3-12">
+										<h3>Ulf Johansson</h3>
+										<p class="micro bold">Besiktningsman</p>
+										<a href="mailto:ulf@besiktningsman.se">
+											<p class="micro bold text-blue">ulf@besiktningsman.se</p>
+										</a>
+									</li>
+									<li class="col-3-12">
+										<h3>Patrik Svensson</h3>
+										<p class="micro bold">Besiktningsman</p>
+										<a href="mailto:patrik.svensson@besiktningsman.se">
+											<p class="micro bold text-blue">patrik.svensson@besiktningsman.se</p>
 										</a>
 									</li>
 								</ul>
