Removed the meta tags per request from SEO master race people and also added HotJar tracking

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -6,7 +6,6 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="keywords" content="besiktningsman.se, besiktningsman, entreprenadbesiktning, kontakta besiktningsman ledning, besiktningsman ledning">
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../favicon.ico">
 	<!-- Making the website social media friendly-->
@@ -38,6 +37,17 @@
 	</script>
 	<!-- google site verification -->
 	<meta name="google-site-verification" content="uIsQeRnTuJtqD_rORyLb6GKgVNufjeEkczKMFszRIO4" />
+	<!-- Hotjar Tracking Code for www.besiktningsman.se -->
+	<script>
+	    (function(h,o,t,j,a,r){
+	        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+	        h._hjSettings={hjid:754022,hjsv:6};
+	        a=o.getElementsByTagName('head')[0];
+	        r=o.createElement('script');r.async=1;
+	        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+	        a.appendChild(r);
+	    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+	</script>
 
 </head>
 
@@ -96,7 +106,7 @@
 		<div class="content">
 			<a href="../" class="logo"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
-				<h2 class="bold small text-blueGrey">Navigation</h2>
+				<span class="bold small text-blueGrey">Navigation</span>
 				<li><a href="../#erbjudande"><p>Vårt erbjudande</p></a></li>
 				<br>
 				<br>
