Replaced h2 tag on mobile menu with span

--- a/dokument/index.html
+++ b/dokument/index.html
@@ -101,7 +101,7 @@
 		<div class="content">
 			<a href="../" class="logo"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
-				<h2 class="bold small text-blueGrey">Navigation</h2>
+				<span class="bold small text-blueGrey">Navigation</span>
 				<li>
 					<a href="../#erbjudande">
 						<p>Vårt erbjudande</p>
