going through all the h1, h2, h3 tags etc

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		<div class="content">
 			<a href="../" class="logo"><img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se"></a>
 			<ul class="mainMenu text-blue">
-				<h2 class="bold small text-blueGrey">Navigation</h2>
+				<span class="bold small text-blueGrey">Navigation</span>
 				<li>
 					<a href="#erbjudande">
 						<p>Vårt erbjudande</p>
@@ -197,7 +197,7 @@
 						<ul class="flex reverse flex-phone">
 							<li class="col-6-12 left fromLeft cell-32">
 								<h1>Entreprenadbesiktning som ökar lönsamheten.</h1>
-								<h3>Besiktningsman.se erbjuder digitaliserad entreprenadbesiktning över hela landet.</h3>
+								<h2 class="small">Besiktningsman.se erbjuder digitaliserad entreprenadbesiktning över hela landet.</h2>
 								<ul>
 									<li>
 										<p class="small">Det ger er:</p>
@@ -230,23 +230,7 @@
 									KONTAKTA MIG
 								</a>
 								<!-- typeform JS -->
-								<script>
-									(function() {
-										var qs, js, q, s, d = document,
-											gi = d.getElementById,
-											ce = d.createElement,
-											gt = d.getElementsByTagName,
-											id = "typef_orm_share",
-											b = "https://embed.typeform.com/";
-										if (!gi.call(d, id)) {
-											js = ce.call(d, "script");
-											js.id = id;
-											js.src = b + "embed.js";
-											q = gt.call(d, "script")[0];
-											q.parentNode.insertBefore(js, q)
-										}
-									})()
-								</script>
+								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 
 							</li>
 							<div class="col-6-12 left fromRight">
@@ -309,7 +293,7 @@
 			<div class="container" style="height: 360px;">
 				<div class="wrap">
 					<div class="fix-10-12" style="padding-top: 5%;">
-						<h1>Vårt erbjudande</h1>
+						<h2>Vårt erbjudande</h2>
 						<p class="menu inlineBlock margin-right-2 underline"><a href="#entreprenad">Entreprenad</a></p>
 						<p class="menu inlineBlock underline"><a href="#brf">BRF</a></p>
 						<p class="menu inlineBlock margin-left-2 underline"><a href="#privat">Privat</a></p>
@@ -329,7 +313,7 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
-								<h1>Entreprenadbesiktning för nyproduktion <br>och ROT</h1>
+								<h2>Entreprenadbesiktning för nyproduktion <br>och ROT</h2>
 								<p>
 									Besiktningsman.se erbjuder ett komplett rikstäckande utbud av entreprenadbesiktningstjänster för nyproduktion och ROT.
 								</p>
@@ -340,29 +324,13 @@
 									Det ger bland annat möjlighet till dokumentation i vår besiktningsportal vid slutbesiktning.
 								</p>
 								<a href="tjanster/entreprenad/">
-									<p class="common-Link">Läs mer om våra tjänster för entreprenadbesiktningar<i class="icono-arrow2-left"></i></p>
+									<p class="common-Link">Läs mer om vårt erbjudande för entreprenadbesiktningar<i class="icono-arrow2-left"></i></p>
 								</a>
 								<br>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft fromLeft text-32">
 										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
-										<script>
-											(function() {
-												var qs, js, q, s, d = document,
-													gi = d.getElementById,
-													ce = d.createElement,
-													gt = d.getElementsByTagName,
-													id = 'typef_orm_share',
-													b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
-												if (!gi.call(d, id)) {
-													js = ce.call(d, 'script');
-													js.id = id;
-													js.src = b + 'share.js';
-													q = gt.call(d, 'script')[0];
-													q.parentNode.insertBefore(js, q)
-												}
-											})()
-										</script>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 									</li>
 								</ul>
 							</li>
@@ -386,32 +354,16 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
-								<h1 class="">Besiktningstjänster för bostadsrättsföreningar</h1>
+								<h2>Besiktningstjänster för bostadsrättsföreningar</h2>
 								<p>
 									Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av nyproduktion och ROT-arbeten, samt KA-Kontrollansvarig, för bostadrättsfastigheter.
 								</p>
 								<a href="tjanster/brf/">
-									<p class="common-Link">Läs mer om våra tjänster för bostadsrättsföreningar<i class="icono-arrow2-left"></i></p>
+									<p class="common-Link">Läs mer om vårt erbjudande för bostadsrättsföreningar<i class="icono-arrow2-left"></i></p>
 								</a>
 								<br>
 								<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
-								<script>
-									(function() {
-										var qs, js, q, s, d = document,
-											gi = d.getElementById,
-											ce = d.createElement,
-											gt = d.getElementsByTagName,
-											id = 'typef_orm_share',
-											b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
-										if (!gi.call(d, id)) {
-											js = ce.call(d, 'script');
-											js.id = id;
-											js.src = b + 'share.js';
-											q = gt.call(d, 'script')[0];
-											q.parentNode.insertBefore(js, q)
-										}
-									})()
-								</script>
+								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 							</li>
 							<li class="col-6-12 left fromRight">
 								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" id="landingPagePhotos" width="1000" height="700" src="assets/img/backgrounds/winter/winter_apartments.jpg" alt="Foto av ett snöigt innerstockholm" />
@@ -434,33 +386,17 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
-								<h1 class="">Besiktningstjänster för privatpersoner</h1>
+								<h2>Besiktningstjänster för privatpersoner</h2>
 								<h3>Småhus, lägenheter, fritidshus</h3>
 								<p>Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
 								<a href="tjanster/privat/">
-									<p class="common-Link">Läs mer om våra tjänster för privatpersoner<i class="icono-arrow2-left"></i></p>
+									<p class="common-Link">Läs mer om vårt erbjudande för privatpersoner<i class="icono-arrow2-left"></i></p>
 								</a>
 								<br>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft fromLeft text-32">
 										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
-										<script>
-											(function() {
-												var qs, js, q, s, d = document,
-													gi = d.getElementById,
-													ce = d.createElement,
-													gt = d.getElementsByTagName,
-													id = 'typef_orm_share',
-													b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
-												if (!gi.call(d, id)) {
-													js = ce.call(d, 'script');
-													js.id = id;
-													js.src = b + 'share.js';
-													q = gt.call(d, 'script')[0];
-													q.parentNode.insertBefore(js, q)
-												}
-											})()
-										</script>
+										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 									</li>
 								</ul>
 							</li>
@@ -491,23 +427,7 @@
 								</a>
 								<br>
 								<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
-								<script>
-									(function() {
-										var qs, js, q, s, d = document,
-											gi = d.getElementById,
-											ce = d.createElement,
-											gt = d.getElementsByTagName,
-											id = 'typef_orm_share',
-											b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
-										if (!gi.call(d, id)) {
-											js = ce.call(d, 'script');
-											js.id = id;
-											js.src = b + 'share.js';
-											q = gt.call(d, 'script')[0];
-											q.parentNode.insertBefore(js, q)
-										}
-									})()
-								</script>
+								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 							</li>
 							<li class="col-6-12 left fromRight">
 								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" id="landingPagePhotos" width="1000" height="700" src="assets/img/ispect/bm_ispect_closeup.jpg" alt="Besiktningsman med iSpect öppen i sin iPad" />
