--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -135,10 +135,10 @@
 			<div class="container" style="height: 560px;padding-top: 5%;">
 				<div class="wrap">
 					<div class="fix-10-12">
-						<img src="../assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="margin-bottom-1" style="height: 100%;">
+						<h1>
+							Sveriges ledande <br>entreprenadbesiktningsföretag <br> för nyproduktion och ROT.
+						</h1>
 						<p>
-							Sveriges ledande entreprenadbesiktningsföretag för nyproduktion och ROT.
-							<br>
 							Bildat 2003 av erfarna besiktningsmän som ett oberoende besiktningsföretag.
 						</p>
 					</div>
@@ -155,9 +155,9 @@
 				<div class="wrap">
 
 					<div class="fix-10-12 left margin-top-1">
-						<h1>
+						<h2>
 							Rikstäckande besiktningstjänster med digitaliserad besiktningsprocess.
-						</h1>
+						</h2>
 							<p>
 								Besiktningsman.se är ledande inom entreprenadbesiktning för nyproduktion av bostäder och kommersiella byggnader.
 								Sedan starten 2003 har vi också en stark position på bostadsrättsförenings- och småhusmarknaden.
@@ -193,7 +193,7 @@
 				<div class="wrap left">
 
 					<div class="fix-10-12">
-						<h1>Ledning</h1>
+						<h2>Ledning</h2>
 						<!--  List one -->
 						<ul class="flex fixedSpaces later left margin-bottom-5">
 							<li class="col-3-12">
@@ -244,7 +244,7 @@
 	<section class="slide whiteSlide margin-bottom-2">
 		<div class="container-lg">
 			<div class="wrap">
-				<h1 class="fix-10-12">Några uppdragsgivare och samarbetspartners</h1>
+				<h2 class="fix-10-12">Några uppdragsgivare och samarbetspartners</h2>
 			</div>
 		</div>
 	</section>
