Removed the arrow icon for the overlay page and replaced the remaining h1 tags with h2

--- a/index.html
+++ b/index.html
@@ -222,7 +222,6 @@
 								<a class="popupTrigger" data-popup-id="ispect-details">
 									<p class="margin-bottom-2 common-Link">
 										Mer om digitaliserad entreprenadbesiktning
-										<i class="icono-arrow2-left"></i>
 									</p>
 								</a>
 								<!-- typeform button -->
@@ -313,7 +312,7 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
-								<h2>Entreprenadbesiktning för nyproduktion <br>och ROT</h2>
+								<h2>Entreprenadbesiktning för nyproduktion och ROT</h2>
 								<p>
 									Besiktningsman.se erbjuder ett komplett rikstäckande utbud av entreprenadbesiktningstjänster för nyproduktion och ROT.
 								</p>
@@ -419,7 +418,7 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
-								<h1>Vår digitala besiktningsprocess</h1>
+								<h2>Vår digitala besiktningsprocess</h2>
 								<h3>För ökad lönsamhet och leveranssäkerhet i byggprojekt</h3>
 								<p>Direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p>
 								<a class="popupTrigger" data-popup-id="ispect-details">
@@ -499,7 +498,7 @@
 
 	<!-- ispect details Popup Text -->
 	<div class="popup white" data-popup-id="ispect-details" id="ispect-details">
-		<div class="close button closeButton blue text-white soft-shadow bold">X</div>
+		<div class="close button closeButton blue text-white soft-shadow bold">STÄNG SIDAN</div>
 		<div class="content popupContent">
 
 			<section class="slide white">
