--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 									<p class="common-Link">Läs mer om vårt erbjudande för bostadsrättsföreningar<i class="icono-arrow2-left"></i></p>
 								</a>
 								<br>
-								<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
+								<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Kontakta mig om pris</a>
 								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 							</li>
 							<li class="col-6-12 left fromRight">
@@ -394,7 +394,7 @@
 								<br>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft fromLeft text-32">
-										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
+										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Kontakta mig om pris</a>
 										<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 									</li>
 								</ul>
