added a box with links to the blog posts

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -156,14 +156,17 @@
 								<a href="tel:+46101654015"><p class="micro bold text-blue">Tel: +46101654015</p></a>
 								<a href="../assets/press/bm-press.zip" download="besiktningsman.se-press-paket.zip"><p class="micro bold text-blue">Logga samt foton</p></a>
 							</div>
-							<!-- no active PM links yet -->
-							<!-- <h3 class="pad-header margin-0" style="padding-left: 20px;">
-								Pressmeddelanden
+							<h3 class="pad-header margin-0">
+								Besiktningsbloggen
 							</h3>
 							<div class="margin-left-2">
-								<a href="#"><p class="micro bold text-blue" style="margin-top: 15px;">Länk PM1</p></a>
-								<a href="#"><p class="micro bold text-blue">Länk PM2</p></a>
-							</div> -->
+								<a href="https://medium.com/@magnusjanson/st%C3%A4ll-skall-krav-%C3%A4ven-p%C3%A5-best%C3%A4llaren-ab0fcb0c9f20">
+									<p class="micro bold text-blue" style="margin-top: 15px;">Ställ Skall-krav även på beställaren!</p>
+								</a>
+								<a href="https://medium.com/besiktningsbloggen/lonsammare-projekt-c8f9adba4e2">
+									<p class="micro bold text-blue" style="margin-top: 15px;">Ska vi ha en billig besiktning — eller tjäna pengar på den?</p>
+								</a>
+							</div>
 							<h3 class="pad-header margin-0">
 								Nyhetsbrevet Byggintelligens
 							</h3>
